# bazel-workshop

./: .gitattributes  .gitignore  README.md
Examples/: examples.md
examples/hello_world/: WORKSPACE.bazel
examples/hello_world/cpp/: BUILD.bazel  hello_world.cpp
examples/hello_world/java/: BUILD.bazel  hello_world.java
examples/hello_world/rust/: BUILD.bazel  hello_world.rs
examples/hello_world/typescript/: BUILD.bazel  hello_world.ts
